results/SpecGenBench/4-shot/log-Merge-2023_11_04_20_40_26.txt
class Merge {
    //@ requires nums1 != null && nums2 != null;
    //@ ensures \result.length == nums1.length + nums2.length;
    //@ ensures (\forall int i; 0 <= i && i < nums1.length; nums1[i] <= \result[i]);
    //@ ensures (\forall int i; 0 <= i && i < nums2.length; nums2[i] <= \result[nums1.length + i]);
    public static int[] merge(int[] nums1, int[] nums2) {
        int m = nums1.length, n = nums2.length;
        int p1 = 0, p2 = 0;
        int[] sorted = new int[m + n];
        int cur;
        //@ maintaining 0 <= p1 && p1 <= m;
        //@ maintaining 0 <= p2 && p2 <= n;
        //@ maintaining p1 + p2 == (\old(p1) + \old(p2));
        //@ maintaining (\forall int i; 0 <= i && i < p1; nums1[i] <= sorted[i]);
        //@ maintaining (\forall int i; 0 <= i && i < p2; nums2[i] <= sorted[m + i]);
        //@ maintaining (\forall int i; p1 <= i && i < m; nums1[i] <= sorted[p1 + i]);
        //@ maintaining (\forall int i; p2 <= i && i < n; nums2[i] <= sorted[m + p2 + i]);
        //@ decreases m + n - p1 - p2;
        while (p1 < m || p2 < n) {
            if (p1 == m) {
                cur = nums2[p2++];
            } else if (p2 == n) {
                cur = nums1[p1++];
            } else if (nums1[p1] < nums2[p2]) {
                cur = nums1[p1++];
            } else {
                cur = nums2[p2++];
            }
            sorted[p1 + p2 - 1] = cur;
        }
        return sorted;
    }
}
/home/max/Documents/JMLGPT/tmp/Merge.java:13: error: cannot find symbol
        //@ maintaining p1 + p2 == (\old(p1) + \old(p2));
                                         ^
  symbol:   variable p1
  location: class Merge
/home/max/Documents/JMLGPT/tmp/Merge.java:13: error: cannot find symbol
        //@ maintaining p1 + p2 == (\old(p1) + \old(p2));
                                                    ^
  symbol:   variable p2
  location: class Merge
2 errors

